@@ -26,3 +26,6 @@ replace-wscomments=no
 # Automerge files that the user hasn't modified
 # (yes or no)
 replace-unmodified=no
+
+# Per-session log file of changes made to configuration files
+#log-file=/var/log/dispatch-conf.log
